new snap_preventions default for /route endpoint